// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 1`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Aug 09 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 09
      </option>
      <option
        data-testid="date-option"
        value="Thu Aug 08 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 08
      </option>
      <option
        data-testid="date-option"
        value="Wed Aug 07 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 07
      </option>
      <option
        data-testid="date-option"
        value="Tue Aug 06 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 06
      </option>
      <option
        data-testid="date-option"
        value="Mon Aug 05 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 05
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 2`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Aug 09 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 09
      </option>
      <option
        data-testid="date-option"
        value="Thu Aug 08 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 08
      </option>
      <option
        data-testid="date-option"
        value="Wed Aug 07 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 07
      </option>
      <option
        data-testid="date-option"
        value="Tue Aug 06 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 06
      </option>
      <option
        data-testid="date-option"
        value="Mon Aug 05 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 05
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 3`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Aug 09 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 09
      </option>
      <option
        data-testid="date-option"
        value="Thu Aug 08 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 08
      </option>
      <option
        data-testid="date-option"
        value="Wed Aug 07 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 07
      </option>
      <option
        data-testid="date-option"
        value="Tue Aug 06 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 06
      </option>
      <option
        data-testid="date-option"
        value="Mon Aug 05 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 05
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 4`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Aug 09 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 09
      </option>
      <option
        data-testid="date-option"
        value="Thu Aug 08 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 08
      </option>
      <option
        data-testid="date-option"
        value="Wed Aug 07 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 07
      </option>
      <option
        data-testid="date-option"
        value="Tue Aug 06 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 06
      </option>
      <option
        data-testid="date-option"
        value="Mon Aug 05 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 05
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 5`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Aug 09 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 09
      </option>
      <option
        data-testid="date-option"
        value="Thu Aug 08 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 08
      </option>
      <option
        data-testid="date-option"
        value="Wed Aug 07 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 07
      </option>
      <option
        data-testid="date-option"
        value="Tue Aug 06 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 06
      </option>
      <option
        data-testid="date-option"
        value="Mon Aug 05 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Aug 05
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 6`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Thu Apr 04 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 04
      </option>
      <option
        data-testid="date-option"
        value="Wed Apr 03 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 03
      </option>
      <option
        data-testid="date-option"
        value="Tue Apr 02 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 02
      </option>
      <option
        data-testid="date-option"
        value="Mon Apr 01 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 01
      </option>
      <option
        data-testid="date-option"
        value="Fri Mar 29 2024 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Mar 29
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 7`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Thu Apr 04 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 04
      </option>
      <option
        data-testid="date-option"
        value="Wed Apr 03 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 03
      </option>
      <option
        data-testid="date-option"
        value="Tue Apr 02 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 02
      </option>
      <option
        data-testid="date-option"
        value="Mon Apr 01 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 01
      </option>
      <option
        data-testid="date-option"
        value="Fri Mar 29 2024 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Mar 29
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 8`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Thu Apr 04 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 04
      </option>
      <option
        data-testid="date-option"
        value="Wed Apr 03 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 03
      </option>
      <option
        data-testid="date-option"
        value="Tue Apr 02 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 02
      </option>
      <option
        data-testid="date-option"
        value="Mon Apr 01 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 01
      </option>
      <option
        data-testid="date-option"
        value="Fri Mar 29 2024 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Mar 29
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 9`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Thu Apr 04 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 04
      </option>
      <option
        data-testid="date-option"
        value="Wed Apr 03 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 03
      </option>
      <option
        data-testid="date-option"
        value="Tue Apr 02 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 02
      </option>
      <option
        data-testid="date-option"
        value="Mon Apr 01 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 01
      </option>
      <option
        data-testid="date-option"
        value="Fri Mar 29 2024 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Mar 29
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 10`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Thu Apr 04 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 04
      </option>
      <option
        data-testid="date-option"
        value="Wed Apr 03 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 03
      </option>
      <option
        data-testid="date-option"
        value="Tue Apr 02 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 02
      </option>
      <option
        data-testid="date-option"
        value="Mon Apr 01 2024 01:00:00 GMT+0100 (British Summer Time)"
      >
         Apr 01
      </option>
      <option
        data-testid="date-option"
        value="Fri Mar 29 2024 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Mar 29
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 11`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Dec 29 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 29
      </option>
      <option
        data-testid="date-option"
        value="Thu Dec 28 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 28
      </option>
      <option
        data-testid="date-option"
        value="Wed Dec 27 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 27
      </option>
      <option
        data-testid="date-option"
        value="Tue Dec 26 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 26
      </option>
      <option
        data-testid="date-option"
        value="Mon Dec 25 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 25
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 12`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Dec 29 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 29
      </option>
      <option
        data-testid="date-option"
        value="Thu Dec 28 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 28
      </option>
      <option
        data-testid="date-option"
        value="Wed Dec 27 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 27
      </option>
      <option
        data-testid="date-option"
        value="Tue Dec 26 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 26
      </option>
      <option
        data-testid="date-option"
        value="Mon Dec 25 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 25
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 13`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Dec 29 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 29
      </option>
      <option
        data-testid="date-option"
        value="Thu Dec 28 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 28
      </option>
      <option
        data-testid="date-option"
        value="Wed Dec 27 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 27
      </option>
      <option
        data-testid="date-option"
        value="Tue Dec 26 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 26
      </option>
      <option
        data-testid="date-option"
        value="Mon Dec 25 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 25
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 14`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Dec 29 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 29
      </option>
      <option
        data-testid="date-option"
        value="Thu Dec 28 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 28
      </option>
      <option
        data-testid="date-option"
        value="Wed Dec 27 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 27
      </option>
      <option
        data-testid="date-option"
        value="Tue Dec 26 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 26
      </option>
      <option
        data-testid="date-option"
        value="Mon Dec 25 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 25
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 15`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="Fri Dec 29 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 29
      </option>
      <option
        data-testid="date-option"
        value="Thu Dec 28 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 28
      </option>
      <option
        data-testid="date-option"
        value="Wed Dec 27 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 27
      </option>
      <option
        data-testid="date-option"
        value="Tue Dec 26 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 26
      </option>
      <option
        data-testid="date-option"
        value="Mon Dec 25 2023 00:00:00 GMT+0000 (Greenwich Mean Time)"
      >
         Dec 25
      </option>
    </select>
  </div>
</DocumentFragment>
`;
